--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <!--Drink Select -->
   <h2>Drink:</h2> 
   <select onchange="UpdateVisuals()" name="drink" id="drink">
-    <option value="none">None</option>
+    <option value="notchosen">None</option>
     <option value="cocacola">Coca Cola</option>
     <option value="pepsi">Pepsi</option>
     <option value="sprite">Sprite</option>
