Confirmed site is accurate, final edit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Header -->
   <h1><img class="Logo" src="./images/JacksBurgeriaLogo.png"></h1>
- 
+
   <!-- Table for progress display -->
   <table class="Progress">
     <!--Burger Progress Img-->
@@ -39,13 +39,13 @@
         <img class="Select3" src="./images/Order.png">
       </th>
     </tr>
-  </table> 
+  </table>
   <!--Main Elements-->
   <!--      BURGER SECTION      -->
   <!-- Burger text image -->
   <img class="text1" src="./images/BurgerText.png">
   <!--Size input-->
-  <h2>Size:</h2> 
+  <h2>Size:</h2>
   <select name="size" id="sizeselect">
     <option value="medium">Medium</option>
     <option value="large">Large</option>
@@ -57,15 +57,18 @@
   <table class="Toppings">
     <tr>
       <th class="thTopp">
-        <button class="ToppingsRight" onclick="delTop('Pickles')">-1</button><button class="ToppingsRight" onclick="addTop('Pickles')">+1</button>
+        <button class="ToppingsRight" onclick="delTop('Pickles')">-1</button><button class="ToppingsRight"
+          onclick="addTop('Pickles')">+1</button>
         <h3 id="pickleDis" class="ToppingName">Pickles (0)</h3>
       </th>
       <th class="thTopp">
-        <button class="ToppingsRight" onclick="delTop('Tomatoes')">-1</button><button class="ToppingsRight" onclick="addTop('Tomatoes')">+1</button>
+        <button class="ToppingsRight" onclick="delTop('Tomatoes')">-1</button><button class="ToppingsRight"
+          onclick="addTop('Tomatoes')">+1</button>
         <h3 id="tomatoDis" class="ToppingName">Tomatoes (0)</h3>
       </th>
       <th class="thTopp">
-        <button class="ToppingsRight" onclick="delTop('Meat')">-1</button><button class="ToppingsRight" onclick="addTop('Meat')">+1</button>
+        <button class="ToppingsRight" onclick="delTop('Meat')">-1</button><button class="ToppingsRight"
+          onclick="addTop('Meat')">+1</button>
         <h3 id="meatDis" class="ToppingName">Meat (1)</h3>
       </th>
     </tr>
@@ -73,7 +76,7 @@
   <br>
 
 
-  
+
   <!--      DRINKS SECTION      -->
   <!-- Drinks text image -->
   <img class="text1" src="./images/DrinkText.png"><br><br><br>
@@ -82,53 +85,53 @@
       <tr>
         <th>
           <img class="soda" src="./images/CocaCola.png">
-        </th> 
+        </th>
       </tr>
       <tr class="dark">
-         <th>
+        <th>
           Coca Cola
-         </th>
+        </th>
       </tr>
     </table>
     <table class="SodaDisplay">
       <tr>
         <th>
           <img class="soda" src="./images/Pepsi.png">
-        </th> 
+        </th>
       </tr>
       <tr class="dark">
-         <th>
-           Pepsi
-         </th>
+        <th>
+          Pepsi
+        </th>
       </tr>
     </table>
     <table class="SodaDisplay">
       <tr>
         <th>
           <img class="soda" src="./images/Sprite.png">
-        </th> 
+        </th>
       </tr>
       <tr class="dark">
-         <th>
-           Sprite
-         </th>
+        <th>
+          Sprite
+        </th>
       </tr>
     </table>
     <table class="SodaDisplay">
       <tr>
         <th>
           <img class="soda" src="./images/MysteryJuice.png">
-        </th> 
+        </th>
       </tr>
       <tr class="dark">
-         <th>
-           Mystery Juice
-         </th>
+        <th>
+          Mystery Juice
+        </th>
       </tr>
     </table>
   </table>
   <!--Drink Select -->
-  <h2>Drink:</h2> 
+  <h2>Drink:</h2>
   <select onchange="UpdateVisuals()" name="drink" id="drink">
     <option value="notchosen">None</option>
     <option value="cocacola">Coca Cola</option>
@@ -138,7 +141,7 @@
   </select>
   <!--Line breaks-->
   <br><br><br>
-  
+
   <!--      ORDER SECTION      -->
   <!-- Finish Order text image -->
   <img class="text2" src="./images/FinishOrderText.png"><br>
@@ -146,7 +149,8 @@
   <div id="OrderOutput">Your order will cost:</div>
   <!-- Finish Order button -->
   <div id="WarningMsg"><br></div>
-  <button onclick="DisplayCurrentOrder()" id ="finish order" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  <button onclick="DisplayCurrentOrder()" id="finish order"
+    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
     Finish Order
   </button>
   <!-- Scripts -->
