Final edit, fr this time

--- a/confirm.html
+++ b/confirm.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-orange.min.css" />
 </head>
 <body>
-  <!-- Return to other page link + ordered text -->
+  <!-- Return to other page link + ordered tex -->
   Thank you for ordering, your meal will arrive shortly!
   <a href="/index.html">Back to main page</a>
 </body>
